BE use test profile to inject NoopEmailConfirmationSender